Saving project right before rendering (Cycles) causes empty render-preview #65951

Closed
opened 2019-06-20 11:54:38 +02:00 by Vyacheslav Kobozev · 19 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-17 21:07, hash: 741641f4c3
Worked: ~ a week ago

Short description of error
here the video. Image rendered properly and can be saved but preview is invisible
2019-06-20_12-45-25.mp4

Exact steps for others to reproduce the error
change file (rendering border for example), save file, start to render, you will see no preview.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-17 21:07, hash: `741641f4c3` Worked: ~ a week ago **Short description of error** here the video. Image rendered properly and can be saved but preview is invisible [2019-06-20_12-45-25.mp4](https://archive.blender.org/developer/F7350426/2019-06-20_12-45-25.mp4) **Exact steps for others to reproduce the error** change file (rendering border for example), save file, start to render, you will see no preview.

Added subscriber: @Vyach

Added subscriber: @Vyach

#66073 was marked as duplicate of this issue

#66073 was marked as duplicate of this issue

#66150 was marked as duplicate of this issue

#66150 was marked as duplicate of this issue

#66070 was marked as duplicate of this issue

#66070 was marked as duplicate of this issue

#66052 was marked as duplicate of this issue

#66052 was marked as duplicate of this issue

#66048 was marked as duplicate of this issue

#66048 was marked as duplicate of this issue

Added subscriber: @brecht

Added subscriber: @brecht

I can't reproduce this. Is this happening with the default classroom demo file without any changes?
https://download.blender.org/demo/test/classroom.zip

If not, can you attach a .blend file that has the issue?

I can't reproduce this. Is this happening with the default classroom demo file without any changes? https://download.blender.org/demo/test/classroom.zip If not, can you attach a .blend file that has the issue?

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can reproduce this, I'll try to bisect this.

I can reproduce this, I'll try to bisect this.

@brecht yes, it is default classroom, 64 px tiles, gpu render.
Bug is not depend on file

Also my sculpt branch is ok
2.80 (sub 74), branch: sculpt-mode-features, commit date: 2019-06-16 21:16, hash: 5b19ecdc6b
It was merged with master branch 16/06 or so, Try to search there.

@brecht yes, it is default classroom, 64 px tiles, gpu render. Bug is not depend on file Also my sculpt branch is ok 2.80 (sub 74), branch: sculpt-mode-features, commit date: 2019-06-16 21:16, hash: `5b19ecdc6b` It was merged with master branch 16/06 or so, Try to search there.
Clément Foucault was assigned by Sebastian Parborg 2019-06-21 15:22:48 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

I've bisected this down to this commit 28b06b6a05
Any ideas @fclem ?

I've bisected this down to this commit 28b06b6a05 Any ideas @fclem ?

Added subscriber: @popqjp

Added subscriber: @popqjp

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

This issue was referenced by b3a2de9d18

This issue was referenced by b3a2de9d181ab69c192c737e24a7b808081df06b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @tkress

Added subscriber: @tkress

Added subscriber: @Renderbicks

Added subscriber: @Renderbicks
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65951
No description provided.