Fix T65951 Saving project right before rendering (Cycles) causes empty render-preview

Since we are now using the full framebuffer (color+depth) inside the image
editor, we need to disable the depth test by default.